--- a/room-details.html
+++ b/room-details.html
@@ -395,8 +395,8 @@
 <div id="popupOverlay" class="popup-overlay">
   <div class="popup-content">
     <span class="close-btn" onclick="closePopup()">×</span>
-    <img src="img/room/QR.webp" alt="Room Preview" class="popup-img">
-    <div class="room-code"><b>Lipa No 78094</b></div>
+    <img src="img/room/QR.jpg" alt="Room Preview" class="popup-img">
+    <div class="room-code"><b>Lipa No 21243758<br>KIJA DEUS MAKINDO</b></div>
   </div>
 </div>
 
